// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test lexer initial state #263 - expect inline 1`] = `
Program {
  "children": [
    Inline {
      "kind": "inline",
      "raw": "<?php$a ?>",
      "value": "<?php$a ?>",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`Test lexer initial state parse asp echo tag 1`] = `
Program {
  "children": [
    Echo {
      "expressions": [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "b",
        },
      ],
      "kind": "echo",
      "shortForm": true,
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`Test lexer initial state parse asp tag 1`] = `
Program {
  "children": [
    Echo {
      "expressions": [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "b",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`Test lexer initial state parse short echo 1`] = `
Program {
  "children": [
    Echo {
      "expressions": [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
      ],
      "kind": "echo",
      "shortForm": true,
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`Test lexer initial state parse short tag 1`] = `
Program {
  "children": [
    Echo {
      "expressions": [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`Test lexer test #148 - sensitive lexer 1`] = `
[
  [
    "T_OPEN_TAG",
    "<?php ",
    1,
  ],
  [
    "T_VARIABLE",
    "$this",
    1,
  ],
  [
    "T_OBJECT_OPERATOR",
    "->",
    1,
  ],
  [
    "T_WHITESPACE",
    " ",
    1,
  ],
  [
    "T_STRING",
    "list",
    1,
  ],
  ";",
]
`;

exports[`Test lexer test #1003 - null-safe operator with reserved keyword 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": NullSafePropertyLookup {
        "kind": "nullsafepropertylookup",
        "offset": Identifier {
          "kind": "identifier",
          "name": "class",
        },
        "what": Variable {
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`Test lexer test comments 1`] = `
Program {
  "children": [
    Inline {
      "kind": "inline",
      "raw": "
      ",
      "value": "
      ",
    },
    Inline {
      "kind": "inline",
      "leadingComments": [
        CommentLine {
          "kind": "commentline",
          "offset": 20,
          "value": "// simple comment ",
        },
      ],
      "raw": "
      ",
      "value": "      ",
    },
    Inline {
      "kind": "inline",
      "leadingComments": [
        CommentLine {
          "kind": "commentline",
          "offset": 57,
          "value": "// another line ",
        },
      ],
      "raw": "
      ",
      "value": "      ",
    },
    Inline {
      "kind": "inline",
      "leadingComments": [
        CommentBlock {
          "kind": "commentblock",
          "offset": 92,
          "value": "/**/",
        },
      ],
      "raw": "
      ",
      "trailingComments": [
        CommentLine {
          "kind": "commentline",
          "offset": 112,
          "value": "// last comment
",
        },
      ],
      "value": "      ",
    },
  ],
  "comments": [
    CommentLine {
      "kind": "commentline",
      "offset": 20,
      "value": "// simple comment ",
    },
    CommentLine {
      "kind": "commentline",
      "offset": 57,
      "value": "// another line ",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 92,
      "value": "/**/",
    },
    CommentLine {
      "kind": "commentline",
      "offset": 112,
      "value": "// last comment
",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`Test lexer test tokens 1`] = `
[
  [
    "T_OPEN_TAG",
    "<?php
",
    1,
  ],
  [
    "T_ECHO",
    "echo",
    2,
  ],
  [
    "T_WHITESPACE",
    " ",
    2,
  ],
  [
    "T_VARIABLE",
    "$var",
    2,
  ],
  ";",
]
`;

exports[`Test lexer test unput on whitespace 1`] = `
[
  [
    "T_OPEN_TAG",
    "<?php ",
    1,
  ],
  [
    "T_WHITESPACE",
    "
	 ",
    1,
  ],
]
`;
